@@ -20,7 +20,13 @@ var (
 
 const (
 	MEMPOOL_FILE_NAME = "mempool.dmp"
-	FILE_VERSION_3    = 0xffffffff
+	FILE_VERSION_MAX  = 0xffffffff
+	FILE_VERSION_3    = FILE_VERSION_MAX
+	FILE_VERSION_4    = FILE_VERSION_3 - 1
+	FILE_VERSION_CUR  = FILE_VERSION_4
+
+	HAS_WAITING4_FLAG = 1 << 23
+	HAS_TX_FLAG       = 1 << 22
 )
 
 func bool2byte(v bool) byte {
@@ -50,6 +56,32 @@ func (t2s *OneTxToSend) WriteBytes(wr io.Writer) {
 	wr.Write([]byte{bool2byte(t2s.Local), t2s.Blocked, bool2byte(t2s.MemInputs != nil), bool2byte(t2s.Final)})
 }
 
+func (txr *OneTxRejected) WriteBytes(wr io.Writer) {
+	wr.Write(txr.Hash.Hash[:])
+	binary.Write(wr, binary.LittleEndian, uint32(txr.Time.Unix()))
+
+	// the next 32 bits is: (reason << 24) | has_waiting4 << 23 | has tx << 22
+	tmp32 := txr.Size | (uint32(txr.Reason) << 24)
+	if txr.Waiting4 != nil {
+		tmp32 |= HAS_WAITING4_FLAG
+	}
+	if txr.Tx != nil {
+		if txr.Size != uint32(len(txr.Tx.Raw)) {
+			println("ERROR: Rejected Tx Size mismatch. THIS SHOUDL NOT HAPPEN - PLEASE REPORT!")
+			txr.Tx = nil
+		} else {
+			tmp32 |= HAS_TX_FLAG
+		}
+	}
+	binary.Write(wr, binary.LittleEndian, tmp32)
+	if txr.Waiting4 != nil {
+		wr.Write(txr.Waiting4.Hash[:])
+	}
+	if txr.Tx != nil {
+		wr.Write(txr.Tx.Raw[:])
+	}
+}
+
 func MempoolSave(force bool) {
 	if !force && !common.CFG.TXPool.SaveOnDisk {
 		os.Remove(common.GocoinHomeDir + MEMPOOL_FILE_NAME)
@@ -67,7 +99,7 @@ func MempoolSave(force bool) {
 
 	wr.Write(common.Last.Block.BlockHash.Hash[:])
 
-	btc.WriteVlen(wr, FILE_VERSION_3)
+	btc.WriteVlen(wr, FILE_VERSION_CUR)
 
 	btc.WriteVlen(wr, uint64(len(TransactionsToSend)))
 	for _, t2s := range TransactionsToSend {
@@ -80,20 +112,155 @@ func MempoolSave(force bool) {
 		binary.Write(wr, binary.LittleEndian, v)
 	}
 
+	btc.WriteVlen(wr, uint64(len(TransactionsRejected)))
+	for _, v := range TransactionsRejected {
+		v.WriteBytes(wr)
+	}
+
 	wr.Write(END_MARKER[:])
 	wr.Flush()
 	f.Close()
 }
 
-func MempoolLoad2() bool {
+func newOneTxToSendFromFile(rd io.Reader, file_version int) (t2s *OneTxToSend, er error) {
+	var tina uint32
+	var i int
+	var le uint64
+	var tmp [4]byte
+
+	t2s = new(OneTxToSend)
+
+	if le, er = btc.ReadVLen(rd); er != nil {
+		return
+	}
+	raw := make([]byte, int(le))
+
+	if _, er = io.ReadFull(rd, raw); er != nil {
+		return
+	}
+
+	t2s.Tx, i = btc.NewTx(raw)
+	if t2s.Tx == nil || i != len(raw) {
+		er = errors.New(fmt.Sprint("Error parsing tx from ", MEMPOOL_FILE_NAME, " at idx ", len(TransactionsToSend)))
+		return
+	}
+	t2s.Tx.SetHash(raw)
+
+	if le, er = btc.ReadVLen(rd); er != nil {
+		return
+	}
+	t2s.Spent = make([]uint64, int(le))
+	if er = binary.Read(rd, binary.LittleEndian, t2s.Spent[:]); er != nil {
+		return
+	}
+
+	if er = binary.Read(rd, binary.LittleEndian, &t2s.Invsentcnt); er != nil {
+		return
+	}
+
+	if er = binary.Read(rd, binary.LittleEndian, &t2s.SentCnt); er != nil {
+		return
+	}
+
+	if er = binary.Read(rd, binary.LittleEndian, &tina); er != nil {
+		return
+	}
+	t2s.Firstseen = time.Unix(int64(tina), 0)
+
+	if file_version >= 3 {
+		if er = binary.Read(rd, binary.LittleEndian, &tina); er != nil {
+			return
+		}
+		t2s.Lastseen = time.Unix(int64(tina), 0)
+	} else {
+		t2s.Lastseen = time.Now()
+	}
+
+	if er = binary.Read(rd, binary.LittleEndian, &tina); er != nil {
+		return
+	}
+	t2s.Lastsent = time.Unix(int64(tina), 0)
+
+	if er = binary.Read(rd, binary.LittleEndian, &t2s.Volume); er != nil {
+		return
+	}
+
+	if er = binary.Read(rd, binary.LittleEndian, &t2s.Fee); er != nil {
+		return
+	}
+
+	if er = binary.Read(rd, binary.LittleEndian, &t2s.SigopsCost); er != nil {
+		return
+	}
+
+	if er = binary.Read(rd, binary.LittleEndian, &t2s.VerifyTime); er != nil {
+		return
+	}
+
+	if _, er = io.ReadFull(rd, tmp[:4]); er != nil {
+		return
+	}
+	t2s.Local = tmp[0] != 0
+	t2s.Blocked = tmp[1]
+	if tmp[2] != 0 {
+		t2s.MemInputs = make([]bool, len(t2s.TxIn))
+	}
+	t2s.Final = tmp[3] != 0
+
+	t2s.Tx.Fee = t2s.Fee
+	return
+}
+
+func newOneTxRejectedFromFile(rd io.Reader) (txr *OneTxRejected, er error) {
+	var tina uint32
+	var i int
+
+	txr = new(OneTxRejected)
+	txr.Id = new(btc.Uint256)
+	if _, er = io.ReadFull(rd, txr.Id.Hash[:]); er != nil {
+		return
+	}
+
+	if er = binary.Read(rd, binary.LittleEndian, &tina); er != nil {
+		return
+	}
+	txr.Time = time.Unix(int64(tina), 0)
+
+	if er = binary.Read(rd, binary.LittleEndian, &tina); er != nil {
+		return
+	}
+	txr.Size = tina & (HAS_TX_FLAG - 1)
+	txr.Reason = byte(tina >> 24)
+
+	if (tina & HAS_TX_FLAG) != 0 {
+		raw := make([]byte, txr.Size)
+		txr.Tx, i = btc.NewTx(raw)
+		if txr.Tx == nil || i != len(raw) {
+			er = errors.New(fmt.Sprint("Error parsing tx from ", MEMPOOL_FILE_NAME, " at idx ", len(TransactionsToSend)))
+			return
+		}
+		txr.Tx.Hash.Hash = txr.Id.Hash
+	}
+
+	if (tina & HAS_WAITING4_FLAG) != 0 {
+		txr.Waiting4 = new(btc.Uint256)
+		if _, er = io.ReadFull(rd, txr.Waiting4.Hash[:]); er != nil {
+			return
+		}
+	}
+
+	return
+}
+
+func MempoolLoad() bool {
 	var t2s *OneTxToSend
+	var txr *OneTxRejected
 	var totcnt, le uint64
 	var tmp [32]byte
 	var bi BIDX
-	var tina uint32
-	var i int
 	var cnt1, cnt2 uint
-	var mempool_file_version_3 bool
+
+	var file_version int
 
 	f, er := os.Open(common.GocoinHomeDir + MEMPOOL_FILE_NAME)
 	if er != nil {
@@ -114,99 +281,27 @@ func MempoolLoad2() bool {
 	if totcnt, er = btc.ReadVLen(rd); er != nil {
 		goto fatal_error
 	}
-	if totcnt == FILE_VERSION_3 {
-		mempool_file_version_3 = true
+
+	if totcnt > FILE_VERSION_MAX/2 {
+		if totcnt < FILE_VERSION_CUR {
+			er = errors.New(MEMPOOL_FILE_NAME + " - new version of the file (not supported by this code)")
+			goto fatal_error
+		}
+		file_version = FILE_VERSION_MAX - int(totcnt) + 3 // FILE_VERSION_MAX is vesion 3
+
 		if totcnt, er = btc.ReadVLen(rd); er != nil {
 			goto fatal_error
 		}
+	} else {
+		file_version = 2 // version 2 did not have the version field
 	}
+	fmt.Println(MEMPOOL_FILE_NAME, "file version", file_version)
 
 	TransactionsToSend = make(map[BIDX]*OneTxToSend, int(totcnt))
 	for ; totcnt > 0; totcnt-- {
-		le, er = btc.ReadVLen(rd)
-		if er != nil {
+		if t2s, er = newOneTxToSendFromFile(rd, file_version); er != nil {
 			goto fatal_error
 		}
-
-		t2s = new(OneTxToSend)
-		raw := make([]byte, int(le))
-
-		_, er = io.ReadFull(rd, raw)
-		if er != nil {
-			goto fatal_error
-		}
-
-		t2s.Tx, i = btc.NewTx(raw)
-		if t2s.Tx == nil || i != len(raw) {
-			er = errors.New(fmt.Sprint("Error parsing tx from ", MEMPOOL_FILE_NAME, " at idx", len(TransactionsToSend)))
-			goto fatal_error
-		}
-		t2s.Tx.SetHash(raw)
-
-		le, er = btc.ReadVLen(rd)
-		if er != nil {
-			goto fatal_error
-		}
-		t2s.Spent = make([]uint64, int(le))
-		if er = binary.Read(rd, binary.LittleEndian, t2s.Spent[:]); er != nil {
-			goto fatal_error
-		}
-
-		if er = binary.Read(rd, binary.LittleEndian, &t2s.Invsentcnt); er != nil {
-			goto fatal_error
-		}
-
-		if er = binary.Read(rd, binary.LittleEndian, &t2s.SentCnt); er != nil {
-			goto fatal_error
-		}
-
-		if er = binary.Read(rd, binary.LittleEndian, &tina); er != nil {
-			goto fatal_error
-		}
-		t2s.Firstseen = time.Unix(int64(tina), 0)
-
-		if mempool_file_version_3 {
-			if er = binary.Read(rd, binary.LittleEndian, &tina); er != nil {
-				goto fatal_error
-			}
-			t2s.Lastseen = time.Unix(int64(tina), 0)
-		} else {
-			t2s.Lastseen = time.Now()
-		}
-
-		if er = binary.Read(rd, binary.LittleEndian, &tina); er != nil {
-			goto fatal_error
-		}
-		t2s.Lastsent = time.Unix(int64(tina), 0)
-
-		if er = binary.Read(rd, binary.LittleEndian, &t2s.Volume); er != nil {
-			goto fatal_error
-		}
-
-		if er = binary.Read(rd, binary.LittleEndian, &t2s.Fee); er != nil {
-			goto fatal_error
-		}
-
-		if er = binary.Read(rd, binary.LittleEndian, &t2s.SigopsCost); er != nil {
-			goto fatal_error
-		}
-
-		if er = binary.Read(rd, binary.LittleEndian, &t2s.VerifyTime); er != nil {
-			goto fatal_error
-		}
-
-		if _, er = io.ReadFull(rd, tmp[:4]); er != nil {
-			goto fatal_error
-		}
-		t2s.Local = tmp[0] != 0
-		t2s.Blocked = tmp[1]
-		if tmp[2] != 0 {
-			t2s.MemInputs = make([]bool, len(t2s.TxIn))
-		}
-		t2s.Final = tmp[3] != 0
-
-		t2s.Tx.Fee = t2s.Fee
-
 		TransactionsToSend[t2s.Hash.BIdx()] = t2s
 		TransactionsToSendSize += uint64(len(t2s.Raw))
 		TransactionsToSendWeight += uint64(t2s.Weight())
@@ -221,12 +316,24 @@ func MempoolLoad2() bool {
 		if er = binary.Read(rd, binary.LittleEndian, &le); er != nil {
 			goto fatal_error
 		}
-
 		if er = binary.Read(rd, binary.LittleEndian, &bi); er != nil {
 			goto fatal_error
 		}
-
 		SpentOutputs[le] = bi
+	}
+
+	if file_version >= 4 {
+		if totcnt, er = btc.ReadVLen(rd); er != nil {
+			goto fatal_error
+		}
+		TransactionsRejected = make(map[BIDX]*OneTxRejected, int(totcnt))
+		for ; totcnt > 0; totcnt-- {
+			if txr, er = newOneTxRejectedFromFile(rd); er != nil {
+				goto fatal_error
+			}
+			TransactionsRejected[txr.Id.BIdx()] = txr
+			TransactionsRejectedSize += uint64(txr.Size)
+		}
 	}
 
 	if _, er = io.ReadFull(rd, tmp[:len(END_MARKER)]); er != nil {
